--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,6 @@ dependencies {
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
 
+    //Logging Interceptor
+    implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
 }
